// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyAdvisoryList Should match the snapshot 1`] = `
<EmptyState
  variant="full"
>
  <Title
    headingLevel="h5"
    size="lg"
  >
    No matching advisories found
  </Title>
  <EmptyStateBody>
    To continue, edit your filter settings and search again.
  </EmptyStateBody>
</EmptyState>
`;

exports[`EmptyPackagesList Should match the snapshot 1`] = `
<EmptyState
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    No matching packages found
  </Title>
  <EmptyStateBody>
    To continue, edit your filter settings and search again.
  </EmptyStateBody>
</EmptyState>
`;

exports[`NoSmartManagement Should match the snapshot 1`] = `
<EmptyState
  variant="large"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    Create a content with Red Hat Smart Management
  </Title>
  <EmptyStateBody>
    Manage your infrastructure directly from console.redhat.com by controlling the
        scope of package and advisory updates to be installed on selected systems based on 
        criteria you define, providing you with consistent content across environments
        and time from the console.  
        
    <br
      key=".1"
    />
    
        
    <br
      key=".3"
    />
    
        Creating content templates from console.redhat.com is a premium feature only available with Red Hat Smart Management
  </EmptyStateBody>
</EmptyState>
`;
